--- a/pet-website/birds.html
+++ b/pet-website/birds.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title>Birds</title>
+  <link href="css/code.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <h1>About Birds</h1>
@@ -14,9 +15,10 @@
    </ul>
   <h2>Feeding</h2>
   <p>To know what birds eat, obsreve the nature of their beak. The birds listed above can be fed with seeds of different sizes.Pay attention to their beak size to avoid choking.They can be also given bird feed. And don't forget water!</p>
-  <h3>Grooming</h3>
+  <h2>Grooming</h2>
   <p>Generally, it is advisable to have a bird bath outside(Ensure it is high so as to prevent other animals from drinking!). And change the water daily to avoid health risks for your pet.</p>
-  <h4>Housing</h4>
+  <h2>Housing</h2>
   <p>Bird houses vary from a birdhouse to a cage. Take the bird's physical size into account, as you would want to fit their food and water sources in an easily accesiable area.</p>
+  <a href= pet-website.html>Back To Home Page
   </body>
 </html>
