--- a/pet-website/cats.html
+++ b/pet-website/cats.html
@@ -2,15 +2,17 @@
 <html>
  <head>
   <title>Cats</title>
+  <link href="css/code.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <h1>About Cats</h1>
   <p>Cats, though mostly self-sufficient, won't require as much of your attention as possible.</p>
   <h2>Feeding</h2>
   <p>Cats are hunters, so most of the time, they will hunt rodents for themselves. But, to earn it's trust, give it some meat. Remember, mature cats are lactose intolerant!</p>
-  <h3>Grooming</h3>
+  <h2>Grooming</h2>
   <p>Cats generally groom themselves, so this should not worry you much. Just take it to the vet occasionally.</p>
-  <h4>Housing</h4>
+  <h2>Housing</h2>
   <p>Cats are clean creatures, so their environment isn't. Always clean their homes, and their feeding plates to prevent them from leaving.</p>
+  <a href= pet-website.html>Back To Home Page
   </body>
 </html>
