--- a/pet-website/fish.html
+++ b/pet-website/fish.html
@@ -2,13 +2,15 @@
 <html>
  <head>
   <title>Fish</title>
+  <link href="css/code.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <h1>About Fish</h1>
   <p>Unlike all the other pets, fish do not require water to drink :)</p>
   <h2>Feeding</h2>
   <p>Fish only require that you put fish feed into their bowls daily.</p>
-  <h3>Housing</h3>
+  <h2>Housing</h2>
   <p>Fish require the water in their aquariums be replaced with clean water, just remember to put the fish in a separate area when replacing the water.</p>
+  <a href= pet-website.html>Back To Home Page>
   </body>
 </html>
