--- a/pet-website/rodents.html
+++ b/pet-website/rodents.html
@@ -2,21 +2,23 @@
 <html>
  <head>
   <title>Rodents</title>
+  <link href="css/code.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <h1>About Rodents</h1>
   <p>Rodents are more demanding than one may think, given their solitary nature. They have multiple needs that have to be accounted for.</p>
-  <h2>Common Rodent Pets</h2>
+  <h1>Common Rodent Pets</h1>
    <ul>
      <li>Guinea Pigs</li>
      <li>Hamsters</li>
      <li>Mice</li>
    </ul>
-  <h3>Feeding</h3>
+  <h2>Feeding</h2>
   <p>Rodents generally eat the same things e.g vegetables, fruits and some nuts. Water helps in digestion.</p>
-  <h4>Grooming</h4>
+  <h2>Grooming</h2>
   <p>Trim your pet's hair and nails occasionally, to prevent them from getting lice or infections.</p>
-  <h5>Housing</h5>
+  <h2>Housing</h2>
   <p>Rodents do not require large areas, they can even be put in your breast pocket Just have enough food and water, and they will be alright.</p>
-  </body>
+  <a href= pet-website.html>Back To Home Page
+ </body>
 </html>
