--- a/pet-website/dogs.html
+++ b/pet-website/dogs.html
@@ -2,15 +2,17 @@
 <html>
  <head>
   <title>Dogs</title>
+  <link href="css/code.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <h1>About Dogs</h1>
-  <p>Dogs give you attention, provided you give them something to eat and drink!:</p>
+  <p><strong>Dogs give you attention<strong>, provided you give them something to eat and drink!:)</p>
   <h2>Feeding</h2>
-  <p>Dogs are carnivorous, so give them enough quantites of meat, ensure it is properly washed.</p>
-  <h3>Grooming</h3>
-  <p>Give your dogs a bath daily, trim their nails and give them a shave. Remember to take them to the vet occasionally.</p>
-  <h4>Housing</h4>
-  <p>Dogs need a place to sleep, if having a doghouse is too much. Ensure it is clean at all times, and is properly trained.</p>
+  <p><strong>Dogs are carnivorous<strong>, so give them enough quantites of meat, ensure it is properly washed.</p>
+  <h2>Grooming</h2>
+  <p><strong>Give your dogs a bath daily<strong>, trim their nails and give them a shave. Remember to take them to the vet occasionally.</p>
+  <h2>Housing</h2>
+  <p><strong>Dogs basically need a place to sleep</strong>, if having a doghouse is too much. Ensure it is clean at all times, and is properly trained.</p>
+  <a href= pet-website.html>Back To Home Page
   </body>
 </html>
